Fix alignment in trending section

--- a/styles/style2.css
+++ b/styles/style2.css
@@ -293,6 +293,7 @@ body {
 .trend {
     display: flex;
     align-items: center;
+    padding-left: 20px;
 }
 
 .trend img {
